# EnronEmailParser

./: .gitignore  README.md  pyproject.toml
src/: global_utils.py  main.py  postprocessing_pipeline.py  requirements.txt
src/buffer/: buffer_manager.py
src/data_object/: processed_email.py  user_profile.py
src/email_pipeline/: _helpers.py  pipeline.py
src/group_pipeline/: pipeline.py
src/post_processing/: 1_user_postprocessing.py  2_group_postprocessing.py  3_email_postprocessing.py
src/user_pipeline/: _helpers.py  pipeline.py
